--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,6 +119,11 @@
     <string name="install_nexmon_title">Install Nexmon</string>
     <string name="install_nexmon_sum">Install the Nexmon driver and its management utility (nexutil at /su/xbin)</string>
 
+    <string name="firm_location_text">Firmware Location</string>
+    <string name="util_location_text">Management Utility Location</string>
+    <string name="firm_location_default">/vendor/firmware</string>
+    <string name="util_location_default">/su/xbin</string>
+
     <string name="reset_title">Reset Preferences</string>
     <string name="version_title">Version</string>
     <string name="version">0.7</string>
