Fixes, adjustments, cleanup, update version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,7 @@
     <string name="debug" translatable="false">true</string>
     <string name="confirm_exit" translatable="false">true</string>
     <string name="delete_extra" translatable="false">true</string>
+    <string name="manuf_while_ados" translatable="false">false</string>
 
     <!-- Settings -->
     <string name="general">General</string>
@@ -210,6 +211,9 @@
     <string name="aireplay_title">Aireplay start delay (ms)</string>
     <string name="aireplay_sum">Time to wait when starting aireplay</string>
     <string name="aireplay_desc">If the -D option is not used with aireplay-ng (by default it is), then we need to wait for airodump-ng to lock a channel before we start aireplay-ng.</string>
+
+    <string name="manuf_while_ados_title">Look up manufacturer while ADoS is running</string>
+    <string name="manuf_while_ados_sum">This will cause the app to lag (even cause anr) because each lookup takes about a second</string>
 
     <string name="notif_title">Notification</string>
     <string name="notif_sum">Show notification when the app is in the background</string>
@@ -267,5 +271,5 @@
     <string name="no_backup">There is no backup. It is created when you install the tools through the app.</string>
     <string name="reset_title">Reset Preferences</string>
     <string name="version_title">Version</string>
-    <string name="version" translatable="false">0.12</string>
+    <string name="version" translatable="false">0.13</string>
 </resources>
