--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,7 +163,7 @@
 
     <!-- SendLogActivity -->
     <string name="unexpected_error_title">Unexpected Error</string>
-    <string name="unexpected_error_message">An unexpected error has occurred. A report \"report.txt\" has been generated in your external storage directory.
+    <string name="unexpected_error_message">An unexpected error has occurred. A report has been generated in your external storage directory.
         It contains the app version, the Android version, the model of your device, and a Logcat to help troubleshoot the problem.
         Click below to report the problem.</string>
     <string name="send_report">Send report</string>
@@ -287,5 +287,5 @@
     <string name="no_backup">There is no backup. It is created when you install the tools through the app.</string>
     <string name="reset_title">Reset Preferences</string>
     <string name="version_title">Version</string>
-    <string name="version" translatable="false">0.15</string>
+    <string name="version" translatable="false">0.14</string>
 </resources>
