--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -205,6 +205,7 @@
     <string name="confirm_exit" translatable="false">true</string>
     <string name="delete_extra" translatable="false">true</string>
     <string name="manuf_while_ados" translatable="false">false</string>
+    <string name="always_cap" translatable="false">false</string>
 
     <!-- Settings -->
     <string name="general">General</string>
@@ -232,6 +233,9 @@
     <string name="cap_title">Cap files directory</string>
     <string name="cap_sum">Directory to save cap files (eg. /sdcard/cap)</string>
     <string name="cap_desc">The directory to save the cap file when cracking WPA or WEP. This needs to be a directory that you have access to and won\'t be deleted (eg. not a tmp folder). It will be created and written to, and also a \"rm -rf …\" is ran in it as root so be careful what you enter here. Don\'t end it with /</string>
+
+    <string name="always_cap_title">Save all packets</string>
+    <string name="always_cap_sum">Create a .cap file every time airodump-ng starts</string>
 
     <string name="delete_extra_title">Delete extra cap files</string>
     <string name="delete_extra_sum">Delete .csv and .netxml files created by airodump when cracking a network</string>
