Add option to run a custom command in chroot before reaver starts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -309,6 +309,14 @@
     <string name="tools_location_default">/su/xbin</string>
     <string name="lib_location_default">/vendor/lib</string>
 
+    <string name="chroot">Chroot</string>
+    <string name="custom_chroot_cmd_title">Custom command</string>
+    <string name="custom_chroot_cmd_sum">Command to be ran in chroot when starting reaver</string>
+    <string name="custom_chroot_cmd_desc">This command will be ran in the chroot environment before starting reaver.
+        Can be used to initialize devices, variables etc.
+        For many commands, create a shell script inside the chroot environment and run it from here.
+        If the command you specify here doesn\'t work in chroot, reaver will not start.</string>
+
     <string name="restore_firmware">Restore firmware</string>
     <string name="no_backup">There is no backup. It is created when you install the tools through the app.</string>
     <string name="reset_title">Reset Preferences</string>
